--- a/spekt8-deployment.yaml
+++ b/spekt8-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: spekt8
-          image: elliotxkim/spekt8
+          image: harbor.pks.migros.local/poc/spekt8:latest
           ports:
             - containerPort: 3000
